@@ -79,7 +79,7 @@ BSC32=bscmake.exe
 # ADD BSC32 /nologo
 LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:windows /debug /machine:I386 /pdbtype:sept
-# ADD LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib uuid.lib comctl32.lib /nologo /subsystem:windows /debug /machine:I386 /out:"Debug/bin/xineui.exe" /pdbtype:sept /libpath:"Debug\libdvdnav\ lib\\"
+# ADD LINK32 user32.lib gdi32.lib comdlg32.lib comctl32.lib /nologo /subsystem:windows /debug /machine:I386 /out:"Debug/bin/xineui.exe" /pdbtype:sept /libpath:"Debug\libdvdnav\ lib\\"
 
 !ENDIF 
 
